# wd-flink-demo

./: .gitignore  README.md
consumers/: .env.example  README.md  pyproject.toml
consumers/src/consumer_dashboard/: __init__.py  config.py  kafka_worker.py  main.py  state.py
consumers/src/consumer_dashboard/templates/: dashboard.html
pipelines/: inventory.json  sl-config.yaml
pipelines/dimensions/ldg/dim_activities/: Makefile  pipeline_definition.json  tracking.md
pipelines/facts/ldg/fct_nb_act_per_pgm/: Makefile  pipeline_definition.json
pipelines/ldg/dim_activities/: pipeline_definition.json
pipelines/ldg/fct_nb_act_per_pgm/: pipeline_definition.json  tracking.md
pipelines/ldg/src_activities/: pipeline_definition.json
pipelines/ldg/src_leads/: Makefile  pipeline_definition.json  tracking.md
pipelines/ldg/src_mkt_pgm/: Makefile  pipeline_definition.json  tracking.md
pipelines/mktdemo/: .user.yml  dbt_project.yml  profiles.yml
pipelines/raw/raw_activities/: pipeline_definition.json
pipelines/raw/raw_leads/: Makefile  pipeline_definition.json
pipelines/raw/raw_mkt_pgm/: pipeline_definition.json  tracking.md
pipelines/seeds/raw_activities/: Makefile  pipeline_definition.json  tracking.md
pipelines/seeds/raw_leads/: pipeline_definition.json  tracking.md
pipelines/seeds/raw_mkt_pgm/: Makefile  pipeline_definition.json
producers/: .env.example  README.md  models.py  pyproject.toml  snapshot_mode_tuple_cursor_simple_example.py
producers/src/activity_producer/: __init__.py  cli.py  config.py  producer.py
(+35 files in other folders)
