[project]
name = "consumer-dashboard"
version = "0.1.0"
description = "Confluent Cloud Kafka consumer and HTML gauge dashboard for fct_nb_act_per_pgm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "confluent-kafka[avro]>=2.3.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
consumer-dashboard = "consumer_dashboard.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/consumer_dashboard"]
